Changed structure in html to fix overflow

--- a/main.css
+++ b/main.css
@@ -1,4 +1,3 @@
-
 .filmAdvertising {
   color: red;
 }
@@ -8,6 +7,7 @@
 .filmAdvertising h3 {
   transform: translateY(-70px);
 }
+
 * {
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
@@ -246,6 +246,54 @@ nav {
   cursor: pointer;
 }
 
+.movieContainer {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto; /* Optional: Add horizontal scrolling for small screens */
+  justify-content: center;
+}
+
+.movie-card {
+  flex: 0 0 auto; /* Allow the cards to grow and shrink as needed */
+  background-color: #fff;
+  padding: 0.5rem;
+  text-align: center;
+  transition: transform 0.3s ease-in-out;
+}
+
+.movie-card p {
+  display: none;
+}
+
+.movie-card img {
+  width: 196px;
+  height: auto;
+}
+
+.movie-card h2 {
+  margin-top: 0.5rem;
+  font-size: 1rem;
+  line-height: 0.875rem;
+  min-height: 1.75rem;
+  opacity: 0.7;
+  white-space: normal;
+  max-height: 1.75rem;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-width: 196px;
+}
+
+.hidden-movie {
+  display: none;
+}
+
+.movie__headers {
+  display: flex;
+  justify-content: center;
+}
+
 footer {
   max-width: 1000px;
   margin: 0 auto;
@@ -321,6 +369,4 @@ footer .footerSections {
     color: black;
     text-decoration: none;
   }
-}/*# sourceMappingURL=main.css.map */
-
 }/*# sourceMappingURL=main.css.map */
